# rime-app-config

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/rime/: deploy.rs  mod.rs  paths.rs  phrases.rs  reader.rs  schemas.rs  writer.rs  yaml_utils.rs
src/components/editors/appearance/: app-options-editor.tsx  color-scheme-picker.tsx  color-scheme-preview.tsx  layout-editor.tsx
src/components/editors/global/: hotkeys-editor.tsx  page-size-editor.tsx  schema-list-editor.tsx  switch-key-editor.tsx
src/components/editors/phrases/: phrase-preview-panel.tsx  phrase-table.tsx
src/components/editors/schema/: fuzzy-pinyin-editor.tsx  switches-editor.tsx
src/components/layout/: header.tsx  sidebar.tsx  yaml-preview-panel.tsx
src/hooks/: use-config.ts  use-dirty-state.ts  use-phrases.ts  use-yaml-sync.ts
src/lib/: constants.ts  merger.ts
src/lib/color/: bgr.ts  schemes.ts
src/lib/phrases/: serializer.ts
src/lib/yaml/: parser.ts  patch.ts  serializer.ts
src/pages/: AppearancePage.tsx  DashboardPage.tsx  GlobalPage.tsx  PhrasesPage.tsx  SchemaEditorPage.tsx  SchemaPage.tsx
src/stores/: config-store.ts  phrases-store.ts
src/styles/: globals.css
src/types/: api.ts  config.ts  phrases.ts  schema.ts
